# vrchat-heartio

./: .gitignore  LICENSE  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-py.yaml  release.yml
app-andriod/: .gitignore  README.md  app.json  package.json  pnpm-lock.yaml  tsconfig.json
app-andriod/plugins/: withAndroidSignature.js
app-andriod/scripts/: postbuild.ts
app-apple-watch/: README.md  package.json  pnpm-lock.yaml
app-apple-watch/scripts/: sync.ts
app-desktop/: electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  tsconfig.node.json
app-python/: .gitignore  README.md
app-python/src/: main.py
app-rust/: .gitignore  Cargo.toml  README.md  build-windows.sh
app-rust/src/: bluetooth.rs  config.rs  database.rs  gui.rs  heart_rate.rs  main.rs  osc.rs  signals.rs  system.rs  xiaomi_band.rs
apple-watch/: .gitignore  package.json  pnpm-lock.yaml
apple-watch/heartio/: heartio-Watch-App-Info.plist
cli/: package.json  pnpm-lock.yaml
cli-graph/: index.html  package.json  pnpm-lock.yaml
cli-graph/scripts/: export.py
cli-graph/src/: App.tsx  main.tsx
cli/src/: heartRate.ts  setup.ts
cli/test/: call.ts  server.ts
desktop-app/: electron-builder.yml  package.json  pnpm-lock.yaml
graph/: .gitignore  README.md  package.json
graph/scripts/: export.py
rust/: Cargo.toml  DEPLOYMENT.md  README.md  build-macos.sh  build-windows.bat  build-windows.sh
scripts/: install.sh
sdk-v1/: .env.example  .gitignore  package.json  pnpm-lock.yaml
src/: heartRate.ts  index.ts  osc.ts
(+40 files in other folders)
